[package]
name = "radiors"
version = "0.1.0"
authors = ["collins.huff"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
rustfft = "3.0.1"
tui = { git = "https://github.com/fdehau/tui-rs.git" }
termion = "1.5"
rand = "0.7"
rtlsdr_mt = "2.0.0"
